force-app/main/default/objects/Id_doc_checks__c/Id_doc_checks__c.object-meta.xml
<CustomObject>
    <label>ID &amp; Docs Checks</label>
    <nameField>
        <displayFormat>IDC-{00000}</displayFormat>
        <label>ID &amp; Docs Checks Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ID &amp; Docs Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>