force-app/main/default/objects/Id_doc_checks__c/fields/Aml_check__c.field-meta.xml
<CustomField>
    <fullName>Aml_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AML check</label>
    <type>Checkbox</type>
</CustomField>