force-app/main/default/objects/Id_doc_checks__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ID &amp; Docs Checks</relationshipLabel>
    <relationshipName>ID_Docs_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>