force-app/main/default/objects/Id_doc_checks__c/fields/Bank_account_verification__c.field-meta.xml
<CustomField>
    <fullName>Bank_account_verification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank account verification*</label>
    <type>Checkbox</type>
</CustomField>