force-app/main/default/objects/Id_doc_checks__c/fields/Identity_authenticate_check__c.field-meta.xml
<CustomField>
    <fullName>Identity_authenticate_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Identity Authenticate check</label>
    <type>Checkbox</type>
</CustomField>