force-app/main/default/objects/Id_doc_checks__c/fields/Identity_document_check__c.field-meta.xml
<CustomField>
    <fullName>Identity_document_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Identity document check</label>
    <type>Checkbox</type>
</CustomField>