force-app/main/default/objects/Id_doc_checks__c/fields/Income_verification__c.field-meta.xml
<CustomField>
    <fullName>Income_verification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Income verification</label>
    <type>Checkbox</type>
</CustomField>