force-app/main/default/objects/Id_doc_checks__c/fields/Mortgage_Case__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mortgage Case</label>
    <referenceTo>Mortgage_Case__c</referenceTo>
    <relationshipLabel>ID &amp; Docs Checks</relationshipLabel>
    <relationshipName>ID_Docs_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>