force-app/main/default/objects/Id_doc_checks__c/fields/Verification_status__c.field-meta.xml
<CustomField>
    <fullName>Verification_status__c</fullName>
    <label>Verification status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>