force-app/main/default/objects/Id_doc_checks__c/validationRules/verification_status_value.validationRule-meta.xml
<ValidationRule>
    <fullName>verification_status_value</fullName>
    <active>false</active>
    <description>The verification status field value can only be &quot;Complete&quot; When all the checks are checked.</description>
    <errorConditionFormula>NOT(Bank_account_verification__c)  ||  NOT( Identity_authenticate_check__c )  ||  NOT(Aml_check__c)  ||  NOT(Identity_document_check__c)   ||  NOT(Income_verification__c)</errorConditionFormula>
    <errorMessage>One more check is missing to mark it complete</errorMessage>
</ValidationRule>